force-app/main/default/objects/Platform_Events_Demo_Settings__c/Platform_Events_Demo_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the platform events demo</description>
    <label>Platform Events Demo Settings</label>
</CustomObject>