force-app/main/default/objects/Platform_Events_Demo_Settings__c/fields/ERP_System_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>ERP_System_Endpoint__c</fullName>
    <inlineHelpText>Enter the endpoint for the heroku system</inlineHelpText>
    <label>ERP System Endpoint</label>
    <type>Url</type>
</CustomField>