force-app/main/default/objects/Platform_Events_Demo_Settings__c/fields/Financial_System_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Financial_System_Endpoint__c</fullName>
    <inlineHelpText>URL to financial system</inlineHelpText>
    <label>Financial System Endpoint</label>
    <type>Url</type>
</CustomField>