force-app/main/default/objects/Platform_Events_Demo_Settings__c/fields/Use_Platform_Events__c.field-meta.xml
<CustomField>
    <fullName>Use_Platform_Events__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>All hard connections through apex</inlineHelpText>
    <label>Use Platform Events</label>
    <type>Checkbox</type>
</CustomField>